# sim_poc

./: .dockerignore  .gitignore  ASSET_API_DOCUMENTATION.md  AUTHENTICATION.md  BACKEND_ASSET_API_MAPPING.md  BACKEND_HANDOFF.md  BACKEND_INTEGRATION_IMPLEMENTATION.md  DATABASE_HELPERS_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_AUTH_SETUP.md  DEPLOYMENT_READY.md  Dockerfile  Dockerfile.v3  FLYIO_DEPLOYMENT.md  FRONTEND_AUTH_GUIDE.md  GENESIS_USAGE.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LANGSMITH_SETUP.md  LUIGI_INTEGRATION_SUMMARY.md  QUICK_START.md  README.md  README_V3.md  SCENE_MANAGEMENT_GUIDE.md  SETUP_SUMMARY.md  TASK_11_IMPLEMENTATION_SUMMARY.md  TEAM_CREDENTIALS.md  TESTING_GUIDE_IMAGE_PAIRS.md  V2_API_FINAL_SUMMARY.md  V3_BACKEND_REQUIREMENTS.md  V3_BACKEND_REQUIREMENTS_SUMMARY.md  V3_CRITICAL_GAPS.md  V3_CRITICAL_GAPS_RESOLVED.md  V3_DOCUMENTATION_INDEX.md  V3_INTEGRATION_STATUS.md  V3_WORKFLOW_DIAGRAM.md  check_keys.py  check_users.py  current_schema.json  deploy.sh  (+28 more)
.claude/: settings.local.json
.taskmaster/: state.json
DATA/: scenes.db
backend/: ASSET_UPLOAD_TYPE_TAGS.md  ASSET_UPLOAD_USAGE.md  BLOB_STORAGE_IMPLEMENTATION.md  CLIENT_CAMPAIGN_GUIDE.md  add_team_users.py  api_routes.py  asset_metadata.py  auth.py  cache.db  config.py  database.py  database_helpers.py  docs_search.py  environment_interpreter.py  genesis_renderer.py  genesis_test_result.txt  index_genesis_docs.py  llm_interpreter.py  main.py  main.py.bak  main_v3.py  migrate.py  migrate_to_v3.py  models_registry.py  motion_interpreter.py  ngrok-setup.md  schema.sql  (+12 more)
(+317 files in other folders)
