[project]
name = "sim-poc"
version = "0.1.0"
description = "Physics Simulator with FastAPI backend and Elm frontend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "replicate>=0.25.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=5.0.0",
]
